fix for discipline page videos on mobile

--- a/packages/@coorpacademy-components/src/molecule/discipline-header/style.css
+++ b/packages/@coorpacademy-components/src/molecule/discipline-header/style.css
@@ -76,7 +76,6 @@
   .imgWrapper {
     flex: none;
     text-align: center;
-    height: auto;
     max-height: 30vh;
   }
 
